--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
   "devDependencies": {
     "babel-core": "6.26.3",
     "babel-eslint": "10.0.2",
-    "babel-loader": "^7.1.2",
+    "babel-loader": "7.1.5",
     "babel-plugin-add-module-exports": "1.0.2",
     "babel-plugin-dev-expression": "0.2.1",
     "babel-plugin-dynamic-import-webpack": "1.1.0",
@@ -80,7 +80,7 @@
     "concurrently": "4.1.1",
     "cross-env": "5.2.0",
     "cross-spawn": "6.0.5",
-    "css-loader": "0.28.11",
+    "css-loader": "3.1.0",
     "detect-port": "1.3.0",
     "electron": "2.0.12",
     "electron-builder": "21.1.5",
@@ -114,7 +114,7 @@
     "url-loader": "2.1.0",
     "webpack": "3.10.0",
     "webpack-bundle-analyzer": "3.3.2",
-    "webpack-dev-server": "^2.11.5",
+    "webpack-dev-server": "2.11.5",
     "webpack-merge": "4.2.1"
   },
   "dependencies": {
