--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "description": "Electron application to play GLSL shaders on Corsair keyboard",
   "scripts": {
     "build": "concurrently \"yarn run build-main\" \"yarn run build-renderer\"",
-    "build-dll": "cross-env NODE_ENV=development node --trace-warnings -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.renderer.dev.dll.js --colors",
-    "build-main": "cross-env NODE_ENV=production node --trace-warnings -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.main.prod.js --colors",
-    "build-renderer": "cross-env NODE_ENV=production node --trace-warnings -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.renderer.prod.js --colors",
+    "build-dll": "cross-env NODE_ENV=development node --trace-warnings -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.renderer.dev.dll.js --colors --mode=development",
+    "build-main": "cross-env NODE_ENV=production node --trace-warnings -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.main.prod.js --colors --mode=production",
+    "build-renderer": "cross-env NODE_ENV=production node --trace-warnings -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.renderer.prod.js --colors --mode=production",
     "dev": "cross-env START_HOT=1 node -r babel-register ./internals/scripts/CheckPortInUse.js && cross-env START_HOT=1 yarn run start-renderer-dev",
     "electron-rebuild": "electron-rebuild --parallel --force --types prod,dev,optional --module-dir app",
     "lint": "cross-env NODE_ENV=development eslint --cache --format=node_modules/eslint-formatter-pretty .",
@@ -18,7 +18,7 @@
     "prestart": "yarn run build",
     "start": "cross-env NODE_ENV=production electron ./app/",
     "start-main-dev": "cross-env HOT=1 NODE_ENV=development electron -r babel-register ./app/main.dev",
-    "start-renderer-dev": "cross-env NODE_ENV=development node --trace-warnings -r babel-register ./node_modules/webpack-dev-server/bin/webpack-dev-server --config webpack.config.renderer.dev.js",
+    "start-renderer-dev": "cross-env NODE_ENV=development node --trace-warnings -r babel-register ./node_modules/webpack-dev-server/bin/webpack-dev-server --config webpack.config.renderer.dev.js --mode=development",
     "pack": "yarn run build && electron-builder --dir",
     "dist": "yarn run build && electron-builder --win --x64"
   },
@@ -96,7 +96,7 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-react": "7.14.3",
-    "extract-text-webpack-plugin": "3.0.2",
+    "extract-text-webpack-plugin": "4.0.0-beta.0",
     "fbjs-scripts": "1.2.0",
     "file-loader": "4.1.0",
     "identity-obj-proxy": "3.0.0",
@@ -110,11 +110,12 @@
     "stylefmt": "6.0.3",
     "stylelint": "10.1.0",
     "stylelint-config-standard": "18.3.0",
-    "uglifyjs-webpack-plugin": "1.3.0",
+    "terser-webpack-plugin": "1.3.0",
     "url-loader": "2.1.0",
-    "webpack": "3.10.0",
+    "webpack": "4.38.0",
     "webpack-bundle-analyzer": "3.3.2",
-    "webpack-dev-server": "2.11.5",
+    "webpack-cli": "3.3.6",
+    "webpack-dev-server": "3.7.2",
     "webpack-merge": "4.2.1"
   },
   "dependencies": {
