--- a/package.json
+++ b/package.json
@@ -4,20 +4,22 @@
   "version": "0.3.0",
   "description": "Electron application to play GLSL shaders on Corsair keyboard",
   "scripts": {
-    "build": "concurrently \"yarn run build-main\" \"yarn run build-renderer\"",
-    "build-dll": "cross-env NODE_ENV=development node --trace-warnings -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.renderer.dev.dll.js --colors --mode=development",
-    "build-main": "cross-env NODE_ENV=production node --trace-warnings -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.main.prod.js --colors --mode=production",
-    "build-renderer": "cross-env NODE_ENV=production node --trace-warnings -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.renderer.prod.js --colors --mode=production",
-    "dev": "cross-env START_HOT=1 node -r babel-register ./internals/scripts/CheckPortInUse.js && cross-env START_HOT=1 yarn run start-renderer-dev",
+    "build": "concurrently \"yarn build-main\" \"yarn build-renderer\"",
+    "build-dll": "cross-env NODE_ENV=development node --trace-warnings ./node_modules/webpack/bin/webpack --config webpack.config.renderer.dev.dll.babel.js --colors",
+    "build-e2e": "cross-env E2E_BUILD=true yarn build",
+    "build-main": "cross-env NODE_ENV=production node --trace-warnings ./node_modules/webpack/bin/webpack --config webpack.config.main.prod.babel.js --colors",
+    "build-renderer": "cross-env NODE_ENV=production node --trace-warnings ./node_modules/webpack/bin/webpack --config webpack.config.renderer.prod.babel.js --colors",
+    "dev": "cross-env START_HOT=1 node -r @babel/register ./internals/scripts/CheckPortInUse.js && cross-env START_HOT=1 yarn start-renderer-dev",
     "electron-rebuild": "electron-rebuild --parallel --force --types prod,dev,optional --module-dir app",
-    "lint": "cross-env NODE_ENV=development eslint --cache --format=node_modules/eslint-formatter-pretty .",
-    "lint-fix": "yarn run lint -- --fix",
-    "lint-styles": "stylelint app/*.css app/components/*.css --syntax scss",
-    "postinstall": "node -r babel-register internals/scripts/CheckNativeDep.js && yarn run build-dll && electron-builder install-app-deps && electron-rebuild --force && node node_modules/fbjs-scripts/node/check-dev-engines.js package.json",
-    "prestart": "yarn run build",
-    "start": "cross-env NODE_ENV=production electron ./app/",
-    "start-main-dev": "cross-env HOT=1 NODE_ENV=development electron -r babel-register ./app/main.dev",
-    "start-renderer-dev": "cross-env NODE_ENV=development node --trace-warnings -r babel-register ./node_modules/webpack-dev-server/bin/webpack-dev-server --config webpack.config.renderer.dev.js --mode=development",
+    "lint": "cross-env NODE_ENV=development eslint . --cache --ext .js,.jsx,.ts,.tsx",
+    "lint-fix": "yarn --silent lint --fix; exit 0",
+    "postinstall": "node -r @babel/register internals/scripts/CheckNativeDep.js && electron-builder install-app-deps && yarn build-dll",
+    "preinstall": "node ./internals/scripts/CheckYarn.js",
+    "prestart": "yarn build",
+    "start": "cross-env NODE_ENV=production electron ./app/main.prod.js",
+    "start-main-debug": "yarn start-main-dev --inspect=5858 --remote-debugging-port=9223",
+    "start-main-dev": "cross-env START_HOT=1 NODE_ENV=development electron -r ./internals/scripts/BabelRegister ./app/main.dev.ts",
+    "start-renderer-dev": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.renderer.dev.babel.js",
     "pack": "yarn run build && electron-builder --dir",
     "dist": "yarn run build && electron-builder --win --x64"
   },
@@ -32,7 +34,6 @@
     },
     "files": [
       "dist/",
-      "scripts/",
       "node_modules/",
       "app.html",
       "main.prod.js",
@@ -44,93 +45,103 @@
       "output": "release"
     },
     "extraResources": [
-      {
-        "from": "./app/shaders/",
-        "to": "shaders",
-        "filter": [
-          "**/*"
-        ]
-      },
-      {
-        "from": "./app/images/",
-        "to": "images",
-        "filter": [
-          "**/*"
-        ]
-      }
+      "./resources/**"
     ]
   },
   "devDependencies": {
-    "babel-core": "6.26.3",
-    "babel-eslint": "10.1.0",
-    "babel-loader": "7.1.5",
-    "babel-plugin-add-module-exports": "1.0.2",
-    "babel-plugin-dev-expression": "0.2.1",
-    "babel-plugin-dynamic-import-webpack": "1.1.0",
-    "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-plugin-transform-es2015-classes": "6.24.1",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-react": "6.24.1",
-    "babel-preset-react-hmre": "1.1.1",
-    "babel-preset-react-optimize": "1.0.1",
-    "babel-preset-stage-0": "6.24.1",
-    "babel-register": "6.26.0",
-    "chalk": "4.0.0",
-    "concurrently": "5.1.0",
-    "cross-env": "7.0.2",
-    "cross-spawn": "7.0.3",
-    "css-loader": "3.4.2",
-    "detect-port": "1.3.0",
-    "electron": "9.2.1",
-    "electron-builder": "22.8.0",
-    "electron-debug": "3.1.0",
-    "electron-devtools-installer": "3.1.1",
-    "electron-rebuild": "1.11.0",
-    "eslint": "6.8.0",
-    "eslint-config-airbnb": "18.1.0",
-    "eslint-formatter-pretty": "3.0.1",
-    "eslint-import-resolver-webpack": "0.12.1",
-    "eslint-plugin-compat": "3.5.1",
-    "eslint-plugin-import": "2.20.2",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-react": "7.19.0",
+    "@babel/core": "^7.11.5",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-proposal-decorators": "^7.10.5",
+    "@babel/plugin-proposal-do-expressions": "^7.10.4",
+    "@babel/plugin-proposal-export-default-from": "^7.10.4",
+    "@babel/plugin-proposal-export-namespace-from": "^7.10.4",
+    "@babel/plugin-proposal-function-bind": "^7.11.5",
+    "@babel/plugin-proposal-function-sent": "^7.10.4",
+    "@babel/plugin-proposal-json-strings": "^7.10.4",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.11.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
+    "@babel/plugin-proposal-numeric-separator": "^7.10.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
+    "@babel/plugin-proposal-pipeline-operator": "^7.10.5",
+    "@babel/plugin-proposal-throw-expressions": "^7.10.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-syntax-import-meta": "^7.10.4",
+    "@babel/plugin-transform-react-constant-elements": "^7.10.4",
+    "@babel/plugin-transform-react-inline-elements": "^7.10.4",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
+    "@babel/register": "^7.10.5",
+    "@teamsupercell/typings-for-css-modules-loader": "^2.3.0",
+    "@types/react": "^16.9.51",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/redux-logger": "^3.0.8",
+    "@typescript-eslint/eslint-plugin": "^4.4.0",
+    "@typescript-eslint/parser": "^3.6.1",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-dev-expression": "^0.2.2",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "chalk": "^4.1.0",
+    "concurrently": "^5.3.0",
+    "core-js": "^3.6.5",
+    "cross-env": "^7.0.2",
+    "css-loader": "^3.6.0",
+    "detect-port": "^1.3.0",
+    "electron": "^9.3.2",
+    "electron-builder": "^22.8.1",
+    "electron-devtools-installer": "^3.1.1",
+    "electron-rebuild": "^2.2.0",
+    "eslint": "^7.10.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-airbnb-typescript": "^11.0.0",
+    "eslint-import-resolver-webpack": "^0.13.0",
+    "eslint-plugin-compat": "^3.8.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "6.3.1",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.21.3",
+    "eslint-plugin-react-hooks": "^4.1.2",
     "extract-text-webpack-plugin": "4.0.0-beta.0",
-    "fbjs-scripts": "1.2.0",
-    "file-loader": "4.1.0",
-    "identity-obj-proxy": "3.0.0",
-    "minimist": "1.2.5",
-    "node-sass": "4.13.1",
-    "npm-logical-tree": "1.2.1",
-    "redux-logger": "3.0.6",
-    "rimraf": "3.0.2",
-    "sass-loader": "8.0.2",
-    "style-loader": "1.1.3",
-    "stylelint": "13.3.0",
-    "stylelint-config-standard": "20.0.0",
-    "terser-webpack-plugin": "4.1.0",
-    "url-loader": "4.1.0",
-    "webpack": "4.44.1",
-    "webpack-bundle-analyzer": "3.8.0",
-    "webpack-cli": "3.3.12",
-    "webpack-dev-server": "3.11.0",
-    "webpack-merge": "4.2.2"
+    "file-loader": "^6.1.0",
+    "mini-css-extract-plugin": "^0.12.0",
+    "node-sass": "^4.14.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "redux-logger": "^3.0.6",
+    "rimraf": "^3.0.2",
+    "sass-loader": "^10.0.2",
+    "style-loader": "^1.3.0",
+    "terser-webpack-plugin": "^4.2.3",
+    "typescript": "^4.0.3",
+    "url-loader": "^4.1.0",
+    "webpack": "^4.44.2",
+    "webpack-bundle-analyzer": "^3.9.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.2.0"
   },
   "dependencies": {
-    "devtron": "1.4.0",
-    "font-awesome": "4.7.0",
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "@hot-loader/react-dom": "^16.13.0",
+    "@reduxjs/toolkit": "^1.4.0",
+    "connected-react-router": "^6.8.0",
+    "electron-debug": "^3.1.0",
+    "electron-log": "^4.2.4",
+    "electron-updater": "^4.3.5",
+    "history": "^5.0.0",
     "raf": "3.4.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-hot-loader": "4.12.21",
-    "react-redux": "7.2.1",
-    "redux": "4.0.5",
-    "redux-thunk": "2.3.0",
-    "source-map-support": "0.5.19"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-hot-loader": "^4.13.0",
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "regenerator-runtime": "^0.13.7",
+    "source-map-support": "^0.5.19"
   },
-  "devEngines": {
+  "engines": {
     "node": ">=10.x",
-    "npm": ">=6.x",
     "yarn": ">=1.16.x"
   }
 }
